Wed Dec 12 21:03:23 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c: backported from the trunk.
   - the "ondelay" and "offdelay" parameters are now being honored
     when the UPS shuts down, like they should be.
   - rewrite documentation for "ondelay" since this timer starts
     counting the moment the UPS is turned off, and not the
     moment line power is restored.
   - Remove "ups.delay.start" and "ups.delay.shutdown" variables
     since they would only affect instant commands. Use only the
     driver parameters "ondelay" and "offdelay".

Wed Dec 12 20:29:51 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/apcsmart.[ch]: Add support for older Smart-UPS devices.

Wed Dec 12 20:22:39 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Don't attempt to reconnect after receiving
   an unexpected error message, but instead just log a message and
   continue (this is in line with earlier behaviour).

Tue Dec 11 20:11:02 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - <various>: Include <stdint.h> where needed (and don't include it
   when not needed). Also make sure to only include it, if it exists.

Tue Dec 11 19:38:18 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/bestfcom.c: Delay values in ser_get_ functions used
   milliseconds instead of microseconds. Driver now also shows power
   values from the UPS (backported from trunk).

Tue Dec 11 19:35:45 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: Workaround for firmware bug in the AVR 550U
   where reading 'UPS.PowerSummary.iDeviceChemistry' string would crash
   the UPS (backported from trunk).

Mon Nov 26 13:45:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Fixed copy-paste error in this driver that
   dates back from the conversion to the new serial I/O functions a
   couple of years back.

Sun Nov  4 20:08:53 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
